--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,52 @@
         <link href="./index.css" rel="stylesheet">
         <script type="module" src="./loader/generatePage.js"></script>
         <script type="module" src="./loader/inject.js"></script>
+        <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="highlite_titlebar">
-            <div style="display: flex; margin-left: 5px;">
-                <img id="logoImg" src="https://www.pngrepo.com/png/25812/512/highlighter.png">
+        <div to="#body-container" before="main" class="highlite_titlebar">
+            <div style="display: flex; margin-left: 5px; align-items: center;">
+                <img id="logoImg" src="./static/icons/icon.png" alt="HighLite Logo"/>
                 <span id="logoText">HighLite</span>
             </div>
 
             <div style="display: flex; right: 110px; position: absolute;">
                 <a style="display: flex;" href="https://discord.gg/SszbKF5dtm" target="_blank" rel="noopener noreferrer">
-                    <svg style="height:20px; width: 20px; fill:white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M524.5 69.8a1.5 1.5 0 0 0 -.8-.7A485.1 485.1 0 0 0 404.1 32a1.8 1.8 0 0 0 -1.9 .9 337.5 337.5 0 0 0 -14.9 30.6 447.8 447.8 0 0 0 -134.4 0 309.5 309.5 0 0 0 -15.1-30.6 1.9 1.9 0 0 0 -1.9-.9A483.7 483.7 0 0 0 116.1 69.1a1.7 1.7 0 0 0 -.8 .7C39.1 183.7 18.2 294.7 28.4 404.4a2 2 0 0 0 .8 1.4A487.7 487.7 0 0 0 176 479.9a1.9 1.9 0 0 0 2.1-.7A348.2 348.2 0 0 0 208.1 430.4a1.9 1.9 0 0 0 -1-2.6 321.2 321.2 0 0 1 -45.9-21.9 1.9 1.9 0 0 1 -.2-3.1c3.1-2.3 6.2-4.7 9.1-7.1a1.8 1.8 0 0 1 1.9-.3c96.2 43.9 200.4 43.9 295.5 0a1.8 1.8 0 0 1 1.9 .2c2.9 2.4 6 4.9 9.1 7.2a1.9 1.9 0 0 1 -.2 3.1 301.4 301.4 0 0 1 -45.9 21.8 1.9 1.9 0 0 0 -1 2.6 391.1 391.1 0 0 0 30 48.8 1.9 1.9 0 0 0 2.1 .7A486 486 0 0 0 610.7 405.7a1.9 1.9 0 0 0 .8-1.4C623.7 277.6 590.9 167.5 524.5 69.8zM222.5 337.6c-29 0-52.8-26.6-52.8-59.2S193.1 219.1 222.5 219.1c29.7 0 53.3 26.8 52.8 59.2C275.3 311 251.9 337.6 222.5 337.6zm195.4 0c-29 0-52.8-26.6-52.8-59.2S388.4 219.1 417.9 219.1c29.7 0 53.3 26.8 52.8 59.2C470.7 311 447.5 337.6 417.9 337.6z"/></svg>
+                    <i class="fa-brands fa-discord"></i>
                 </a>
             </div>
         </div>
+        <div to="main" class="highlite_bar_selected_content">
+            <div class="content_title">
+                <span></span>
+            </div>
+            
+            <div class="content">
+            </div>
+        </div>
+        <div to="main" class="highlite_bar">
+            <div onclick="toggleContent()" class="highlite_bar_item" id="item_settings">🔧</div>
+        </div>
+        <video width="100%" height="100%" autoplay muted loop class="video-background">
+            <source src="./static/media/login_screen.mp4" type="video/mp4">
+        </video>
     </body>
 </html>
+
+<script>
+    function toggleContent() {
+        const contentBox = document.getElementsByClassName("highlite_bar_selected_content")[0];
+        
+        // If contentBox has the class .activated, remove it
+        if (contentBox.classList.contains("activated")) {
+            contentBox.classList.remove("activated");
+            const resizeEvent = new Event('resize');
+            window.dispatchEvent(resizeEvent);
+        } else {
+            // Otherwise, add the class .activated
+            contentBox.classList.add("activated");
+            const resizeEvent = new Event('resize');
+            window.dispatchEvent(resizeEvent);
+       }
+    }
+</script>
