Added IDs to Setting Divs

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
         </div>
         <div to="main" class="highlite_bar_selected_content">
             <div class="content_title">
-                <span></span>
+                <span id="selectedContnetTitle"></span>
             </div>
             
-            <div class="content"></div>
+            <div id="selectedContentDiv" class="content"></div>
         </div>
         <div to="main" class="highlite_bar">
         </div>
