--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
     <head>
         <link href="./static/css/index.css" rel="stylesheet">
         <link href="./static/css/overrides.css" rel="stylesheet">
-        <script type="module" src="./loader/generatePage.js"></script>
+        <script defer type="module" src="./loader/generatePage.js"></script>
         <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
     </head>
     <body>
