--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
         <script type="module" src="logging.js"></script>
         <script defer type="module" src="./loader/generatePage.js"></script>
         <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
+        <script>
+            window.electronApi.onSetTitle((data) => {
+                console.log('Received from main:', data);
+                window.logoText.innerText = data.title;
+            });
+        </script>
     </head>
     <body>
         <div to="#body-container" before="main" class="highlite_titlebar">
