--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,8 @@
         <link href="./static/css/overrides.css" rel="stylesheet">
         <script type="module" src="logging.js"></script>
         <script defer type="module" src="./loader/generatePage.js"></script>
+        <script defer type="module" src="./loader/titleListener.js"></script>
         <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
-        <script>
-            window.electronApi.onSetTitle((data) => {
-                console.log('Received from main:', data);
-                window.logoText.innerText = data.title;
-            });
-        </script>
     </head>
     <body>
         <div to="#body-container" before="main" class="highlite_titlebar">
