--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <link href="./static/css/overrides.css" rel="stylesheet">
         <script type="module" src="logging.js"></script>
         <script defer type="module" src="./loader/generatePage.js"></script>
-        <script defer type="module" src="./loader/titleListener.js"></script>
+        <script type="module" src="./loader/titleListener.js"></script>
         <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
     </head>
     <body>
