--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                 <span id="logoText">HighLite</span>
             </div>
 
-            <div style="display: flex; right: 110px; position: absolute;">
+            <div style="display: flex; left: calc(env(titlebar-area-width, 100%) - 40px); position: absolute;">
                 <a style="display: flex;" href="https://discord.gg/SszbKF5dtm" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-discord"></i>
                 </a>
