--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html><html lang="en">
     <head>
+        <meta charset="UTF-8">
+
         <link href="./static/css/index.css" rel="stylesheet">
         <link href="./static/css/overrides.css" rel="stylesheet">
-        <script type="module" src="logging.js"></script>
         <script defer type="module" src="./loader/generatePage.js"></script>
         <script type="module" src="./loader/titleListener.js"></script>
         <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
