--- a/src/update.html
+++ b/src/update.html
@@ -13,7 +13,7 @@
                 <span id="logoText">HighLite</span>
             </div>
 
-            <div style="display: flex; left: calc(env(titlebar-area-width, 100%) - 40px); position: absolute;">
+            <div style="display: flex;left: calc(env(titlebar-area-width, 100%) - 40px);position: absolute;margin-top: 5px;">
                 <a style="display: flex;" href="https://discord.gg/SszbKF5dtm" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-discord"></i>
                 </a>
