--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
         <link href="./static/css/index.css" rel="stylesheet">
         <link href="./static/css/overrides.css" rel="stylesheet">
         <script defer type="module" src="./loader/generatePage.js"></script>
+        <script type="module" src="highliteCore.js"></script>
         <script type="module" src="./loader/titleListener.js"></script>
+        <script type="module" src="./helpers/titlebarHelpers.js"></script>
+        <script type="module" src="./helpers/zoomHelper.js"></script>
         <script src="https://kit.fontawesome.com/c57f34e341.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -15,14 +18,25 @@
                 <span id="logoText">HighLite</span>
             </div>
 
-            <div style="display: flex;left: calc(env(titlebar-area-width, 100%) - 40px);position: absolute;margin-top: 5px;">
-                <a style="display: flex;" href="https://discord.gg/SszbKF5dtm" target="_blank" rel="noopener noreferrer">
+            <div id="iconbar" style="display: flex;left: calc(env(titlebar-area-width, 100%) - 40px);position: absolute;height: -webkit-fill-available;align-items: anchor-center;">
+                <a href="https://discord.gg/SszbKF5dtm" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-discord"></i>
                 </a>
+                <a style="display: none" id="warningIndicator" href="#"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
             </div>
         </div>
         <video width="100%" height="100%" autoplay muted loop class="video-background">
             <source src="./static/media/login_screen.mp4" type="video/mp4">
         </video>
     </body>
+
+    <style>
+        #iconbar .fa-brands {
+            margin: 0 5px;
+        }
+
+        #iconbar .fa {
+            margin: 0 5px;
+        }
+    </style>
 </html>
