--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,18 @@
                 <span id="logoText">HighLite</span>
             </div>
 
-            <div id="iconbar" style="display: flex;left: calc(env(titlebar-area-width, 100%) - 40px);position: absolute;height: -webkit-fill-available;align-items: anchor-center;">
+            <div id="iconbar" style="display: flex;left: calc(env(titlebar-area-width, 100%));position: absolute;height: -webkit-fill-available;align-items: anchor-center;">
                 <a href="https://discord.gg/SszbKF5dtm" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-discord"></i>
                 </a>
                 <a style="display: none" id="warningIndicator" href="#"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-            </div>
+
+                <!-- Add Traditional Window Controls-->
+                <div id="window-controls">
+                    <a id="minimizeBtn" class="window-control" title="Minimize"><i class="fa-solid fa-minus"></i></a>
+                    <a id="maximizeBtn" class="window-control" title="Maximize"><i class="fa fa-window-maximize"></i></a>
+                    <a id="closeBtn" class="window-control" title="Close"><i class="fa-solid fa-xmark"></i></a>
+                </div>
         </div>
         <video width="100%" height="100%" autoplay muted loop class="video-background">
             <source src="./static/media/login_screen.mp4" type="video/mp4">
@@ -36,6 +42,15 @@
 
         #iconbar .fa {
             margin: 0 5px;
+        }
+
+        #iconbar #window-controls {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-left: 20px;
+            width: 65px;
+            margin-right: 0px;
         }
     </style>
 </html>
