feat: add hot reload (#59)
* feat: add hot reload

* feat: cleaner array

---------

Co-authored-by: KKonaOG <38236274+KKonaOG@users.noreply.github.com>

--- a/src/renderer/client.html
+++ b/src/renderer/client.html
@@ -6,7 +6,7 @@
     <body>
         <div to="#body-container" before="main" class="highlite_titlebar">
             <div style="display: flex; margin-left: 5px; align-items: center;">
-                <img id="logoImg" src="../../../static/icons/icon.png" alt="HighLite Logo"/>
+                <img id="logoImg" src="/icons/icon.png" alt="HighLite Logo"/>
                 <span id="logoText">HighLite</span>
             </div>
 
@@ -24,9 +24,9 @@
                 </div>
         </div>
         <video width="100%" height="100%" autoplay muted loop class="video-background">
-            <source src="../../../static/media/login_screen.mp4" type="video/mp4">
+            <source src="/media/login_screen.mp4" type="video/mp4">
         </video>
-        <script type="module" src="client.ts"></script>
+        <script type="module" src="client/client.ts"></script>
     </body>
 
     <style>
